[Update,Refactor] Updated schedule, refactored codebase